# rules_python_tkinter_matplotlib_bug

./: .bazelrc  BUILD.bazel  MODULE.bazel  requirements_lock.txt  test.py
