"""
"""
module(
    name = "rules_python_tkinter_matplotlib_bug",
)
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_python", version = "1.0.0")
local_path_override(
    module_name = "rules_python",
    path = "/home/nick/repos/rules_python",
)
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.10", is_default = True)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "my_deps",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "my_deps")
